--- a/css/main.scss
+++ b/css/main.scss
@@ -15,17 +15,19 @@ a{
 .selected-border{
 	  border-bottom: solid 4px #ffffff;
 }
-h1,h2,h3,ul,li,body{
+h1,h2,h3,ul,li,body,p{
 	margin: 0;
 	padding: 0;
 	border: 0;
   	font: inherit;
   	vertical-align: baseline;
+  	list-style: none;
 }
 body{
 	background-color: #FFFDD0;
 	width: 100%;
 	margin:0 auto;
+	font-family: "Lato",sans-serif;
 }
 /* Header */
 header{
@@ -50,13 +52,11 @@ header{
 					font-size: 1.5em;
   					text-transform: uppercase;
   					letter-spacing: 1px;
-  					font-family: "Lato",sans-serif;
   					font-weight: 700;
   					color: white;
 				}
 				h3{
 					letter-spacing: 1px;
-  					font-family: "Lato",sans-serif;
   					font-weight: 300;
   					color: white;
 				}
@@ -81,7 +81,6 @@ header{
 			ul{
 				font-weight: 400;
 				font-size: 1.2em;
-				font-family: "Lato",sans-serif;
 				color: white;
 				li{
 					display: inline-block;
@@ -89,7 +88,7 @@ header{
 					letter-spacing: 1px;
 					a{
 						padding: 26px 15px;
-						color: white;
+						color:white;
 					}
 				}
 			}
@@ -108,9 +107,7 @@ header{
 /* End Header */
 /* Section i.e Summary */
 section.summary{
-	
 	letter-spacing: 1px;
-  	font-family: "Lato",sans-serif;
   	text-align: center;
   	padding: 4em 0;
 	h1{
@@ -153,7 +150,6 @@ section.portfolio{
 				  margin: 2em auto;
 				  width: 80%;
 				  letter-spacing: 1px;
-				  font-family: "Lato",sans-serif;
 					h1{
 						font-weight: 900;
 						font-size: 1.5em;
@@ -201,3 +197,93 @@ section.portfolio{
 					}
 }
 /* End Portfolio */
+/* Footer */
+footer{
+	background-color:#8C92AC;
+	max-width: 100%;
+	font-weight: 400;
+  	color: white;
+	.group{
+		display: block;
+		margin: 0 auto;
+  		width: 80%;
+  		padding-top: 3em;
+  		margin-bottom: 30px;
+	}
+	.link{
+		display: inline-block;
+		width: 31%;
+	}
+	.bio{
+		span{
+			display: block;
+			width: 78px;
+			height: 78px;
+			float: left;
+			margin-right: 20px;
+			margin-bottom: 20px;
+		}
+		img{
+  			width: 100%;
+  			height: 100%;
+  			border: 2px solid black;
+		}
+		p{
+			display: initial;
+			margin-left: 5px;
+			text-align: justify;
+			font-size: 18px;
+			letter-spacing: 1px;
+		}
+	}
+	.social{
+		margin: 0 3.1%;
+		font-size: 18px;
+		letter-spacing: 1px;
+		vertical-align: top;
+		li a{
+			color: black;
+		}
+		.ico{
+			display: inline-block;
+			width: 30px;
+			height: 30px;
+			font-size: 35px;
+			color: black;
+			margin-right: 5px;
+		}
+		li:nth-child(3n+2){
+							margin: 10% 0;
+						}
+						li p{
+							display: inline-block;
+							width: 80%;
+							vertical-align: top;
+						}
+	}
+	nav{
+		vertical-align: top;
+		ul{
+			li{
+				a{
+					color:black;
+					font-size: 18px;
+					letter-spacing: 1px;
+				}
+			}
+			li:nth-child(3n+2){
+							margin: 10% 0;
+						}
+		}
+	}
+	.copyright{
+		text-align: center;
+		font-size: 16px;
+		letter-spacing: 1px;
+		padding-bottom: 20px;
+	}
+	
+}
+
+
+/* End Footer */
