--- a/ecommerce/css/main.css
+++ b/ecommerce/css/main.css
@@ -55,5 +55,24 @@ body {
     text-align: center; }
     .itemList li img {
       width: 100%; }
+    .itemList li input[type=number] {
+      color: black;
+      width: 50px;
+      margin: 10px;
+      padding: 0px 5px; }
+
+.orderlist th {
+  width: 33%;
+  height: 100%;
+  text-align: center; }
+  .orderlist th span {
+    margin: 0 auto;
+    display: block;
+    width: 40px; }
+    .orderlist th span img {
+      width: 100%; }
+.orderlist button {
+  width: 100%;
+  margin-top: 20px; }
 
 /*# sourceMappingURL=main.css.map */
