--- a/ecommerce/css/main.scss
+++ b/ecommerce/css/main.scss
@@ -63,8 +63,33 @@ body{
 		img{
 			width: 100%;
 		}
+		input[type=number]{
+			color: black;
+			width: 50px;
+			margin: 10px;
+			padding: 0px 5px;
 
+		}
 		text-align:center;
 	}
 	clear:both;
+}
+.orderlist{
+	th{
+		width: 33%;
+		height: 100%;
+		text-align: center;
+		span{
+			margin: 0 auto;
+			display: block;
+			width: 40px;
+			img{
+				width: 100%;
+			}
+		}
+	}
+	button{
+		width: 100%;
+		margin-top: 20px;
+	}
 }
