--- a/ecommerce/css/main.css
+++ b/ecommerce/css/main.css
@@ -43,7 +43,7 @@ body {
 .itemList {
   display: block;
   width: 100%;
-  padding: 0;
+  padding: 0px;
   height: auto;
   clear: both; }
   .itemList li {
@@ -52,6 +52,9 @@ body {
     width: 150px;
     margin-left: 30px;
     color: white;
+    padding: 5px;
+    margin-top: 30px;
+    border: 1px solid #5bc0de;
     text-align: center; }
     .itemList li img {
       width: 100%; }
