--- a/ecommerce/css/main.scss
+++ b/ecommerce/css/main.scss
@@ -52,7 +52,7 @@ body{
 .itemList{
 	display: block;
 	width: 100%;
-	padding: 0;
+	padding: 0px;
 	height: auto;
 	li{
 		display: block;
@@ -60,6 +60,9 @@ body{
 		width: 150px;
 		margin-left: 30px;
 		color: white;
+		padding: 5px;
+		margin-top: 30px;
+		border: 1px solid #5bc0de;
 		img{
 			width: 100%;
 		}
