--- a/ecommerce/css/main.scss
+++ b/ecommerce/css/main.scss
@@ -13,6 +13,7 @@ body{
 	width: 420px;
 	margin: 0 auto;
 }
+/*Login Page CSS*/
 .login{
 	p{
 		text-align: center;
@@ -41,13 +42,16 @@ body{
 	img{
 		width: 100%;
 	}
-
 }
+//Header for itemList page
 .header{
 	color: white;
 	p{
 		margin-left: 30px;
 	}
+}
+.glyphicon-star{
+	color: yellow;
 }
 .itemList{
 	display: block;
@@ -56,27 +60,37 @@ body{
 	height: auto;
 	li{
 		display: block;
-		float: left;
-		width: 150px;
-		margin-left: 30px;
-		color: white;
-		padding: 5px;
-		margin-top: 30px;
-		border: 1px solid #5bc0de;
+	    float: left;
+	    width: 49%;
+	    color: white;
+	    padding: 5px;
+	    margin-top: 30px;
+	    text-align: center;
 		img{
 			width: 100%;
+			height: 150px;
 		}
 		input[type=number]{
 			color: black;
 			width: 50px;
-			margin: 10px;
 			padding: 0px 5px;
-
 		}
 		text-align:center;
 	}
-	clear:both;
+	li:nth-child(2n+2){
+		margin-left: 7px;
+	}
+	.table-responsive{
+		border: none;
+		th{
+			border: none;
+		}
+	}
 }
+.form-control{
+	border-radius: 20px;
+}
+//Cart Page
 .orderlist{
 	th{
 		width: 33%;
