--- a/ecommerce/css/main.css
+++ b/ecommerce/css/main.css
@@ -28,18 +28,64 @@ body {
     width: 100px;
     margin-left: 10px; }
 
+nav {
+  border: none !important; }
+  nav .navbar-brand {
+    float: left;
+    height: 50px;
+    padding: 0;
+    font-size: 18px;
+    line-height: 20px;
+    text-align: center; }
+    nav .navbar-brand .logo {
+      display: inline-block;
+      margin: 0; }
+    nav .navbar-brand span {
+      display: inline-block;
+      margin: 0;
+      color: white; }
+  nav .navbar-header {
+    background-color: #0B0B48;
+    border: none; }
+  nav .navbar-collapse {
+    background-color: #0B0B48;
+    border: none;
+    text-align: right; }
+    nav .navbar-collapse a {
+      color: white !important; }
+
 .logo {
   display: block;
   width: 50px;
   height: 50px;
+  padding: 10px;
   margin: 10px auto; }
   .logo img {
-    width: 100%; }
+    width: 50px; }
 
 .header {
   color: white; }
   .header p {
     margin-left: 30px; }
+  .header .glyphicon-shopping-cart {
+    font-size: 30px;
+    float: right;
+    display: block;
+    position: relative;
+    top: 10%; }
+    .header .glyphicon-shopping-cart span {
+      display: block;
+      position: absolute;
+      top: 3px;
+      left: 14px;
+      font-size: 14px;
+      color: black; }
+  .header .headerIcon {
+    margin: 10px; }
+    .header .headerIcon h3 {
+      display: block;
+      float: left;
+      margin: 0px; }
 
 .glyphicon-star {
   color: yellow; }
@@ -52,7 +98,7 @@ body {
   .itemList li {
     display: block;
     float: left;
-    width: 49%;
+    width: 190px;
     color: white;
     padding: 5px;
     margin-top: 30px;
