--- a/ecommerce/css/main.css
+++ b/ecommerce/css/main.css
@@ -64,6 +64,12 @@ nav {
   .logo img {
     width: 50px; }
 
+.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
+  background-color: transparent !important; }
+
+.navbar-default .navbar-toggle {
+  border-color: transparent !important; }
+
 .header {
   color: white; }
   .header p {
