--- a/ecommerce/css/main.css
+++ b/ecommerce/css/main.css
@@ -21,13 +21,14 @@ body {
     width: 80%;
     height: 40px;
     border-radius: 5px; }
-.login div {
-  text-align: center;
-  color: red;
-  margin: 5px; }
-  .login div button {
+.login .loginSignup {
+  text-align: center; }
+  .login .loginSignup button {
     width: 100px;
     margin-left: 10px; }
+.login .ng-scope {
+  display: block;
+  text-align: center; }
 
 nav {
   border: none !important; }
