Media Query CSS updated

--- a/ecommerce/css/main.scss
+++ b/ecommerce/css/main.scss
@@ -2,6 +2,8 @@
 /*End Mixins*/
 /*Variables*/
 $blue-color: #0B0B48;
+$greaterthen-Tablet:768px;
+$mobile:449px;
 /*End Variables*/
 
 /*General Classess*/
@@ -11,8 +13,17 @@ $blue-color: #0B0B48;
 /*End General Classess*/
 body{
 	background-color: $blue-color;
-	width: 450px;
 	margin: 0 auto;
+}
+.container{
+	width: 450px;
+	padding: 0px;
+	@media screen and (min-width: $greaterthen-Tablet) {
+    	width: 750px; 
+  	}
+  	@media screen and (max-width: $mobile) {
+    	width: 300px; 
+  	}
 }
 /*Login Page CSS*/
 .login{
@@ -41,9 +52,9 @@ body{
 //ItemList Page Header
 nav{
 	border: none !important;
+
 	.navbar-brand {
 	    float: left;
-	    height: 50px;
 	    padding: 0;
 	    font-size: 18px;
 	    line-height: 20px;
@@ -61,6 +72,7 @@ nav{
 	.navbar-header{
 		background-color: $blue-color;
 		border: none;
+		
 	}
 	.navbar-collapse{
 		background-color: $blue-color; 
@@ -70,25 +82,34 @@ nav{
 			color: white !important;
 		}
 	}
+	@media (min-width: 768px){
+	   .navbar-nav{
+	   		float: left;
+	    	margin: 10px;
+	   	} 
+	}
 	
 }
 .logo{
 		display: block;
-		width: 50px;
-		height: 50px;
+		width: 70px;
 		padding: 10px;
 		margin: 10px auto;
 		img{
-			width: 50px;
+			width: 70px;
 		}
 	}
 //Header for itemList page
 .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
     background-color: transparent !important;
+    
 
 }
 .navbar-default .navbar-toggle {
     border-color: transparent !important;
+    @media screen and (max-width: $mobile) {
+		margin-top:18px;    	
+	}
 }
 .header{
 	color: white;
@@ -147,19 +168,29 @@ nav{
 			width: 50px;
 			padding: 0px 5px;
 		}
-		text-align:center;
+		@media screen and (min-width: $greaterthen-Tablet) {
+		    width: 230px;
+		    margin-left: 15px;
+		}
+		@media screen and(max-width: ($greaterthen-Tablet)-1){
+			li:nth-child(2n+2){
+				margin-left: 7px;
+			}
+		}
+		@media screen and (max-width: $mobile) {
+	    	margin-left:25px;
+	    	width:250px; 
+	  	}
 	}
-	li:nth-child(2n+2){
-		margin-left: 7px;
-	}
+	.table-responsive{
+		border: none !important;
+		th {
+	    	border: none !important;
+		}
+	}	
 }
 //Table Css
-.table-responsive{
-		border: none;
-		th{
-			border: none !important;
-		}
-	}
+
 .form-control{
 	border-radius: 20px;
 }
