--- a/ecommerce/css/main.css
+++ b/ecommerce/css/main.css
@@ -9,8 +9,17 @@
 /*End General Classess*/
 body {
   background-color: #0B0B48;
-  width: 450px;
   margin: 0 auto; }
+
+.container {
+  width: 450px;
+  padding: 0px; }
+  @media screen and (min-width: 768px) {
+    .container {
+      width: 750px; } }
+  @media screen and (max-width: 449px) {
+    .container {
+      width: 300px; } }
 
 /*Login Page CSS*/
 .login p {
@@ -34,7 +43,6 @@ nav {
   border: none !important; }
   nav .navbar-brand {
     float: left;
-    height: 50px;
     padding: 0;
     font-size: 18px;
     line-height: 20px;
@@ -55,21 +63,27 @@ nav {
     text-align: right; }
     nav .navbar-collapse a {
       color: white !important; }
+  @media (min-width: 768px) {
+    nav .navbar-nav {
+      float: left;
+      margin: 10px; } }
 
 .logo {
   display: block;
-  width: 50px;
-  height: 50px;
+  width: 70px;
   padding: 10px;
   margin: 10px auto; }
   .logo img {
-    width: 50px; }
+    width: 70px; }
 
 .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
   background-color: transparent !important; }
 
 .navbar-default .navbar-toggle {
   border-color: transparent !important; }
+  @media screen and (max-width: 449px) {
+    .navbar-default .navbar-toggle {
+      margin-top: 18px; } }
 
 .header {
   color: white; }
@@ -110,7 +124,6 @@ nav {
     color: white;
     padding: 5px;
     margin-top: 30px;
-    text-align: center;
     text-align: center; }
     .itemList li img {
       width: 100%;
@@ -119,13 +132,21 @@ nav {
       color: black;
       width: 50px;
       padding: 0px 5px; }
-  .itemList li:nth-child(2n+2) {
-    margin-left: 7px; }
-
-.table-responsive {
-  border: none; }
-  .table-responsive th {
+    @media screen and (min-width: 768px) {
+      .itemList li {
+        width: 230px;
+        margin-left: 15px; } }
+    @media screen and (max-width: 767px) {
+      .itemList li li:nth-child(2n+2) {
+        margin-left: 7px; } }
+    @media screen and (max-width: 449px) {
+      .itemList li {
+        margin-left: 25px;
+        width: 250px; } }
+  .itemList .table-responsive {
     border: none !important; }
+    .itemList .table-responsive th {
+      border: none !important; }
 
 .form-control {
   border-radius: 20px; }
