--- a/ecommerce/css/main.css
+++ b/ecommerce/css/main.css
@@ -53,7 +53,7 @@ nav {
     nav .navbar-brand span {
       display: inline-block;
       margin: 0;
-      color: white; }
+      color: #00C9FB; }
   nav .navbar-header {
     background-color: #0B0B48;
     border: none; }
@@ -118,14 +118,14 @@ nav {
   .itemList li {
     display: block;
     float: left;
-    width: 200px;
+    width: 220px;
     color: white;
     padding: 5px;
     margin-top: 30px;
     text-align: center; }
     .itemList li img {
       width: 100%;
-      height: 150px; }
+      height: 220px; }
     .itemList li input[type=number] {
       color: black;
       width: 50px;
