--- a/ecommerce/css/main.scss
+++ b/ecommerce/css/main.scss
@@ -66,7 +66,7 @@ nav{
 		span{
 			display: inline-block;
 			margin: 0;
-			color: white;
+			color: #00C9FB;
 		}
 	}
 	.navbar-header{
@@ -153,14 +153,14 @@ nav{
 	li{
 		display: block;
 	    float: left;
-	    width: 200px;
+	    width: 220px;
 	    color: white;
 	    padding: 5px;
 	    margin-top: 30px;
 	    text-align: center;
 		img{
 			width: 100%;
-			height: 150px;
+			height: 220px;
 		}
 		input[type=number]{
 			color: black;
