star update via css

--- a/ecommerce/css/main.css
+++ b/ecommerce/css/main.css
@@ -110,6 +110,9 @@ nav {
 .glyphicon-star {
   color: yellow; }
 
+.glyphicon-star-empty:before {
+  content: ""; }
+
 .itemList {
   display: block;
   width: 100%;
