--- a/ecommerce/css/main.scss
+++ b/ecommerce/css/main.scss
@@ -102,8 +102,6 @@ nav{
 //Header for itemList page
 .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
     background-color: transparent !important;
-    
-
 }
 .navbar-default .navbar-toggle {
     border-color: transparent !important;
@@ -144,6 +142,9 @@ nav{
 //Ends Header for itemList page
 .glyphicon-star{
 	color: yellow;
+}
+.glyphicon-star-empty:before {
+    content: "";
 }
 .itemList{
 	display: block;
