--- a/ecommerce/css/main.css
+++ b/ecommerce/css/main.css
@@ -30,11 +30,13 @@ body {
     width: 80%;
     height: 40px;
     border-radius: 5px; }
+
 .login .loginSignup {
   text-align: center; }
   .login .loginSignup button {
     width: 100px;
     margin-left: 10px; }
+
 .login .ng-scope {
   display: block;
   text-align: center; }
@@ -78,6 +80,9 @@ nav {
 
 .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
   background-color: transparent !important; }
+
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #00C9FB; }
 
 .navbar-default .navbar-toggle {
   border-color: transparent !important;
@@ -181,13 +186,13 @@ nav {
     width: 40px; }
     .orderlist th span img {
       width: 100%; }
+
 .orderlist button {
   width: 100%;
   margin-top: 20px; }
 
 .checkout p {
   color: white; }
+
 .checkout input {
   width: 100% !important; }
-
-/*# sourceMappingURL=main.css.map */
