--- a/views/about.html
+++ b/views/about.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <a href="index.html">
+    <a href="../index.html">
       <img src="../assets/images/lion.jpg">
       <div>
         <h2>Jimit Patel</h2>
@@ -19,7 +19,7 @@
     <nav>
       <ul>
         <li><a href="#" class="selected-border">ABOUT</a></li>
-        <li><a href="index.html">PORTFOLIO</a></li>
+        <li><a href="../index.html">PORTFOLIO</a></li>
         <li><a href="contact.html">CONTACT</a></li>
       </ul>
     </nav>
@@ -94,7 +94,7 @@
       <nav class="link">
         <ul>
           <li><a href="about.html">ABOUT</a><p>Learn about Jimit skills and philosophy</p></li>
-          <li><a href="index.html">PORTFOLIO</a><p>View Jimit front end development work</p></li>
+          <li><a href="../index.html">PORTFOLIO</a><p>View Jimit front end development work</p></li>
           <li><a href="contact.html">CONTACT</a><p>Send a message or project request to Jimit</p></li>
         </ul>
       </nav>
